--- a/index.css
+++ b/index.css
@@ -305,6 +305,9 @@ template {
   display: none; }
 
 /* Screen-size handling */
+@-ms-viewport {
+  width: device-width; }
+
 @media screen and (min-width: 46em), screen and (min-height: 36.5em) {
   html {
     font-size: 1.1em; } }
@@ -319,11 +322,11 @@ template {
 
 @media (min-width: 118em), screen and (min-height: 85em) {
   html {
-    font-size: 1.7em; } }
+    font-size: 1.5em; } }
 
 @media (min-width: 158em) {
   html {
-    font-size: 2.4em; } }
+    font-size: 1.8em; } }
 
 /* Universal rules */
 [hidden] {
@@ -331,266 +334,273 @@ template {
 
 *, *:before, *:after {
   box-sizing: inherit;
-  vertical-align: inherit; }
+  vertical-align: inherit;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
-/* Form styling */
-form {
-  position: relative;
-  clear: both;
-  padding: 0.5em;
-  text-align: center; }
+/* Colors Theme */
+@font-face {
+  font-family: "Source Sans Pro";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./fonts/SourceSansPro-Regular.ttf"); }
 
-textarea,
-select,
-button,
-input,
-label {
-  display: inline-block;
-  width: 100%;
-  height: 1.8em;
-  max-width: 35em;
-  padding: 0.2em;
-  overflow: hidden;
-  transition: all 0.2s ease; }
+@font-face {
+  font-family: "Roboto Slab";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./fonts/RobotoSlab-Regular.ttf"); }
 
-textarea,
-select,
-button,
-input {
-  border: solid 0.05em #d5d5dd;
-  border-radius: 0.1em;
-  background: #f8f8fc; }
-
-[type="button"],
-[type="submit"],
-button {
-  background: #f1f1f9; }
-
-label {
-  display: inline-block;
-  width: 100%;
-  height: 2.4em;
-  padding: 0.3em; }
-
-label span,
-label div {
-  display: inline-block;
-  width: 30%;
-  line-height: 1.8em; }
-
-label textarea,
-label select,
-label button,
-label input {
-  width: 66%; }
-
-label select.half,
-label input.half {
-  width: 33%; }
-
-textarea[readonly],
-input[readonly] {
-  color: #666666; }
-
-textarea:focus:enabled,
-select:focus:enabled,
-button:focus:enabled,
-input:focus:enabled {
-  outline: 0;
-  box-shadow: 0em 0em 0.2em #8f8fa3; }
-
-textarea:hover:enabled,
-select:hover:enabled,
-button:hover:enabled,
-input:hover:enabled {
-  border: solid 0.05em #ababba; }
-
-[type="button"]:hover:enabled,
-[type="submit"]:hover:enabled,
-button:hover.enabled {
-  cursor: pointer;
-  background: #ededf7; }
-
-textarea[readonly]:hover,
-[type="text"][readonly]:hover,
-select:hover {
-  cursor: pointer; }
-
-[type="number"] {
-  text-align: right; }
-
-[type="checkbox"],
-[type="radio"] {
-  display: none; }
-
-[type="checkbox"] + label,
-[type="radio"] + label {
-  width: 33%;
-  height: 1.8em;
-  border-radius: 0.1em;
-  padding: 0;
-  font-style: italic;
-  color: #666666; }
-
-[type="checkbox"] + label::before,
-[type="radio"] + label::before {
-  content: "✘ "; }
-
-[type="checkbox"]:checked:disabled + label,
-[type="radio"]:checked:disabled + label {
-  box-shadow: inset 0 0 0.2em #8f8fa3;
-  color: black;
-  font-style: normal; }
-
-[type="checkbox"]:checked:enabled + label,
-[type="radio"]:checked:enabled + label {
-  background-color: lightgreen;
-  color: black;
-  font-style: normal; }
-
-[type="checkbox"]:checked + label::before,
-[type="radio"]:checked + label::before {
-  content: "✔ "; }
-
-[type="checkbox"]:enabled + label:hover,
-[type="radio"]:enabled + label:hover {
-  background-color: mediumseagreen;
-  color: black;
-  cursor: pointer; }
-
-/* Page layout */
+/* Layout */
 html {
   position: relative;
   box-sizing: border-box;
-  height: 100%;
+  min-height: 100%;
   overflow-y: scroll;
   vertical-align: middle; }
 
 body {
-  position: relative;
-  min-height: 100%;
-  background: #f8f8fc;
-  padding: 2.5em 0;
-  font-family: Arial, sans-serif; }
+  height: 100%;
+  background: linear-gradient(#f6f9fd, #eff4fd);
+  padding: 3rem 0 3em 0;
+  font-family: "Source Sans Pro", Arial, sans-serif;
+  color: #111; }
 
 header {
   position: fixed;
   top: 0;
   z-index: 1;
   width: 100%;
-  box-shadow: 0.1em 0.1em 0.2em 0.1em #e6e6e6;
-  background: white;
-  padding: 0.5em;
-  overflow: hidden;
-  vertical-align: middle; }
+  height: 3rem; }
 
-h1 {
-  display: inline;
-  vertical-align: middle;
-  font-size: 1.25em;
-  font-style: italic;
-  color: #666666; }
-  h1 svg {
-    height: 1em;
-    fill: #666666;
-    transform: skewX(-12deg); }
-
-main {
+main, noscript {
+  display: block;
   width: 50em;
-  height: 100%;
-  max-width: 100%;
+  max-width: 96%;
   margin: auto;
-  padding: 0.5em; }
+  max-height: 100%; }
 
 footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 3em;
-  border-top: solid 1px #e6e6e6;
-  background: white;
-  text-align: center;
-  white-space: nowrap;
-  overflow-x: auto;
-  overflow-y: hidden; }
-  footer a {
+  height: 3em; }
+
+/* Generic Tag Styling */
+a {
+  text-decoration: none;
+  font-stretch: condensed;
+  transition: 0.2s all ease;
+  color: #666666; }
+  a:hover:not(.selected) {
+    text-decoration: none;
+    cursor: pointer; }
+
+p {
+  line-height: 1.4em;
+  vertical-align: baseline; }
+
+nav {
+  float: right;
+  display: inline-block;
+  line-height: 1.5em;
+  text-align: right; }
+  nav a {
     display: inline-block;
-    margin: 0.25em 0.75em; }
-    footer a svg {
-      height: 2.5em;
-      fill: lightgrey;
-      transition: fill 0.2s ease; }
-    footer a:hover svg {
-      fill: #666666; }
-
-/* Content styling */
-section,
-noscript {
-  position: relative;
-  width: 100%;
-  margin: 2rem 0;
-  box-shadow: 0.1em 0.1em 0.2em #e6e6e6;
-  border: solid 1px #e3e3e8;
-  border-radius: 0.1em;
-  background: #fbfbfd;
-  padding: 0.5rem 2rem;
-  overflow: hidden; }
-
-.urlView {
-  width: 100%;
-  border: none;
-  background: white; }
-
-.ContentSection .background {
-  position: absolute;
-  opacity: 0.04;
-  transform: translate(-40%, -40%);
-  filter: grayscale(40%); }
-
-.ContentSection em {
-  position: absolute;
-  right: 1em; }
+    margin: 0.2rem 0 0 1.6em;
+    border-bottom: solid 0.2rem transparent; }
+    nav a:hover, nav a.selected {
+      color: #6263C0; }
+    nav a.selected {
+      border-bottom-color: #6263C0; }
 
 h2 {
-  margin: 1rem 0 2rem 0;
-  font-size: 1.25em;
-  font-weight: normal;
-  text-align: center; }
+  margin: 1em 0 1.75rem 0;
+  font-size: 1.4em;
+  text-align: center;
+  font-family: "Roboto Slab";
+  position: relative;
+  font-weight: bold;
+  vertical-align: bottom; }
 
 h3 {
-  margin: 0.5em;
-  font-size: 1em;
+  margin: 1.2em;
+  font-size: 1.05em;
   font-weight: bold;
   text-align: center; }
 
 hr {
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #e3e3e8, rgba(0, 0, 0, 0)); }
+  margin: 1em;
+  background-image: linear-gradient(to right, transparent, #e6e6e6, transparent); }
 
-nav {
-  float: right;
-  display: inline-block;
-  height: 1.45em;
-  max-width: 100%;
-  line-height: 1.45em;
-  text-align: right;
-  white-space: nowrap;
-  overflow-x: auto;
-  overflow-y: hidden; }
-  nav a {
+ul {
+  margin: 0; }
+  ul li {
+    list-style-type: none;
+    margin: 1em; }
+    ul li:before {
+      content: "− ";
+      position: absolute;
+      margin-left: -1em; }
+
+/* Header Style */
+body > header {
+  box-shadow: 0.1em 0.1em 0.2em 0.1em #e6e6e6;
+  background: white;
+  padding: 0 2%;
+  vertical-align: top;
+  overflow: hidden;
+  line-height: 3rem; }
+  body > header nav {
+    display: none;
+    line-height: inherit;
+    font-size: 1.05em; }
+    @media screen and (min-width: 46em) {
+      body > header nav {
+        display: unset; } }
+    body > header nav a {
+      margin-top: 0.3rem;
+      line-height: 2.4rem; }
+  body > header select {
+    float: right;
+    width: auto;
+    height: 3rem;
+    margin: 0;
+    font-size: 1.05em;
+    border: none !important;
+    box-shadow: none !important;
+    background: white;
+    color: gray;
+    text-align-last: right; }
+    @media screen and (min-width: 46em) {
+      body > header select {
+        display: none; } }
+  body > header h1 {
     display: inline-block;
-    margin: 0 1em; }
+    margin: 0.75rem 0;
+    line-height: 1.5rem;
+    font-size: 1.5em;
+    font-style: italic;
+    color: #666666;
+    font-weight: bolder; }
+    body > header h1 svg {
+      display: inline-block;
+      height: 1em;
+      fill: #666666;
+      transform: skewX(-12deg); }
 
-/* Links */
-a {
-  text-decoration: none;
-  color: #999999;
-  font-stretch: condensed;
-  transition: 0.2s all ease; }
-  a:hover, a.selected {
-    color: burlywood; }
-  a:hover:not(.selected) {
-    cursor: pointer; }
-  a.selected {
-    text-decoration: underline; }
+/* Main Style */
+body > noscript,
+body > main {
+  padding: 0.3em 1%;
+  overflow: hidden; }
+  body > noscript section,
+  body > main section {
+    position: relative;
+    width: 100%;
+    margin: 2rem 0;
+    border-radius: 0.1em;
+    box-shadow: 0.1em 0.1em 0.2em #e6e6e6;
+    background: #fefefe;
+    overflow-x: auto;
+    overflow-y: hidden;
+    padding: 1em 7%; }
+    body > noscript section img,
+    body > main section img {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+      opacity: 0.05;
+      filter: grayscale(40%); }
+    body > noscript section aside,
+    body > main section aside {
+      position: absolute;
+      right: 1em;
+      font-style: italic; }
+    body > noscript section nav a:last-child,
+    body > main section nav a:last-child {
+      font-weight: bold; }
+    body > noscript section a,
+    body > main section a {
+      color: #4c4d9c; }
+      body > noscript section a:hover, body > noscript section a.selected,
+      body > main section a:hover,
+      body > main section a.selected {
+        text-decoration: underline !important; }
+
+/* Footer Style */
+body > footer {
+  border-top: solid 1px #e6e6e6;
+  background: white;
+  padding: 0 1%;
+  overflow: hidden;
+  text-align: center;
+  white-space: nowrap; }
+  body > footer .Icon {
+    display: inline-block;
+    margin: 0.5em 1vw 0 1vw; }
+    body > footer .Icon svg {
+      height: 2em;
+      max-width: 9vw;
+      fill: #cccccc;
+      transition: fill 0.2s ease; }
+    body > footer .Icon:hover svg {
+      fill: #6263C0; }
+
+/* UrlView */
+.urlView {
+  width: 100%;
+  border: none;
+  background: white; }
+
+/*!
+ * Partly taken from animate.css -http://daneden.me/animate
+ * Licensed under the MIT license - http://opensource.org/licenses/MIT
+ * Copyright (c) 2018 Daniel Eden
+ */
+@media (print), (prefers-reduced-motion) {
+  .animated {
+    animation: unset !important;
+    transition: none !important; } }
+
+.animated {
+  animation-duration: 0.4s;
+  animation-fill-mode: both; }
+
+@keyframes slideInRight {
+  from {
+    transform: translate3d(100%, 0, 0);
+    visibility: visible; }
+  to {
+    transform: translate3d(0, 0, 0); } }
+
+@keyframes slideOutRight {
+  from {
+    transform: translate3d(0, 0, 0); }
+  to {
+    transform: translate3d(100%, 0, 0);
+    visibility: hidden; } }
+
+/* Spinner */
+.cosmiclib_loadingAnim,
+.cosmiclib_loader,
+.spinner {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  margin: 0 0.5em;
+  vertical-align: middle;
+  border-radius: 100%;
+  background-color: #666666;
+  animation: animate 1.0s infinite ease-in-out; }
+
+@keyframes animate {
+  0% {
+    transform: scale(0); }
+  100% {
+    transform: scale(1);
+    opacity: 0; } }
